--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_close"/>
+                android:src="@drawable/ic_close" />
         </RelativeLayout>
 
         <TextView
@@ -37,7 +37,7 @@
             android:fontFamily="@font/opensans_bold"
             android:text="@string/create_new_password"
             android:textColor="@color/black"
-            android:textSize="@dimen/_16ssp"/>
+            android:textSize="@dimen/_16ssp" />
 
         <TextView
             android:id="@+id/tvMessage"
@@ -48,7 +48,7 @@
             android:text="@string/chpwdmsg"
             android:textColor="@color/text_color"
             android:textSize="@dimen/text_size_18sp"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -62,23 +62,94 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <!--                <RelativeLayout-->
+                <!--                    android:id="@+id/layoutPwd"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content">-->
+
+                <!--                    <com.google.android.material.textfield.TextInputLayout-->
+                <!--                        android:id="@+id/etlPassword"-->
+                <!--                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:hint="@string/new_password"-->
+                <!--                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"-->
+                <!--                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"-->
+                <!--                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"-->
+                <!--                        app:boxCornerRadiusTopStart="@dimen/_10sdp"-->
+                <!--                        app:boxStrokeColor="@color/primary_green"-->
+                <!--                        app:errorIconDrawable="@null"-->
+                <!--                        app:expandedHintEnabled="false"-->
+                <!--                        app:hintTextColor="@color/primary_green"-->
+                <!--                        app:passwordToggleEnabled="true"-->
+                <!--                        app:passwordToggleTint="#767676">-->
+
+                <!--                        <com.google.android.material.textfield.TextInputEditText-->
+                <!--                            android:id="@+id/etPassword"-->
+                <!--                            android:layout_width="match_parent"-->
+                <!--                            android:layout_height="wrap_content"-->
+                <!--                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.!@#$%^_+-*?/;:'"-->
+                <!--                            android:fontFamily="@font/opensans_semibold"-->
+                <!--                            android:hint=""-->
+                <!--                            android:imeOptions="actionNext"-->
+                <!--                            android:inputType="textPassword"-->
+                <!--                            android:maxLength="20"-->
+                <!--                            android:textColor="@color/text_color"-->
+                <!--                            android:textSize="@dimen/_11sdp" />-->
+
+                <!--                    </com.google.android.material.textfield.TextInputLayout>-->
+
+                <!--                    <LinearLayout-->
+                <!--                        android:id="@+id/layoutIndicator"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:layout_alignParentBottom="true"-->
+                <!--                        android:layout_marginLeft="@dimen/_10sdp"-->
+                <!--                        android:layout_marginRight="@dimen/_10sdp"-->
+                <!--                        android:layout_marginBottom="@dimen/_3sdp"-->
+                <!--                        android:orientation="horizontal"-->
+                <!--                        android:visibility="gone">-->
+
+                <!--                        <View-->
+                <!--                            android:id="@+id/strengthOne"-->
+                <!--                            android:layout_width="match_parent"-->
+                <!--                            android:layout_height="@dimen/_3sdp"-->
+                <!--                            android:layout_weight="1"-->
+                <!--                            android:background="@color/error" />-->
+
+                <!--                        <View-->
+                <!--                            android:id="@+id/strengthTwo"-->
+                <!--                            android:layout_width="match_parent"-->
+                <!--                            android:layout_height="@dimen/_3sdp"-->
+                <!--                            android:layout_marginLeft="@dimen/_5sdp"-->
+                <!--                            android:layout_weight="1"-->
+                <!--                            android:background="@color/error"-->
+                <!--                            android:visibility="invisible" />-->
+
+                <!--                        <View-->
+                <!--                            android:id="@+id/strengthThree"-->
+                <!--                            android:layout_width="match_parent"-->
+                <!--                            android:layout_height="@dimen/_3sdp"-->
+                <!--                            android:layout_marginLeft="@dimen/_5sdp"-->
+                <!--                            android:layout_weight="1"-->
+                <!--                            android:background="@color/error"-->
+                <!--                            android:visibility="invisible" />-->
+                <!--                    </LinearLayout>-->
+                <!--                </RelativeLayout>-->
+
                 <RelativeLayout
                     android:id="@+id/layoutPwd"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_40sdp">
+                    android:layout_height="@dimen/_50sdp">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/etlPassword"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        style="@style/TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/new_password"
-                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
-                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
-                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
-                        app:boxCornerRadiusTopStart="@dimen/_10sdp"
+                        android:textColorHint="@color/primary_black"
                         app:boxStrokeColor="@color/primary_green"
-                        app:errorIconDrawable="@null"
                         app:expandedHintEnabled="false"
                         app:hintTextColor="@color/primary_green"
                         app:passwordToggleEnabled="true"
@@ -88,14 +159,16 @@
                             android:id="@+id/etPassword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.!@#$%^_+-*?/;:'"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint=""
+                            android:hint="8-12 Characters"
                             android:imeOptions="actionNext"
                             android:inputType="textPassword"
-                            android:maxLength="20"
+                            android:maxLength="12"
+                            android:padding="@dimen/_14sdp"
                             android:textColor="@color/text_color"
-                            android:textSize="@dimen/_11sdp" />
+                            android:textColorHint="@color/light_gray"
+                            android:textCursorDrawable="@drawable/cursor_color"
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,37 +177,37 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginLeft="@dimen/_10sdp"
-                        android:layout_marginRight="@dimen/_10sdp"
-                        android:layout_marginBottom="@dimen/_3sdp"
-                        android:orientation="horizontal"
+                        android:paddingBottom="@dimen/_3sdp"
                         android:visibility="gone">
 
                         <View
                             android:id="@+id/strengthOne"
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/_3sdp"
+                            android:layout_height="2dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="10dp"
                             android:layout_weight="1"
-                            android:background="@color/error"/>
+                            android:background="@color/error_red" />
 
                         <View
                             android:id="@+id/strengthTwo"
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/_3sdp"
-                            android:layout_marginLeft="@dimen/_5sdp"
+                            android:layout_height="2dp"
+                            android:layout_marginEnd="10dp"
                             android:layout_weight="1"
-                            android:background="@color/error"
-                            android:visibility="invisible"/>
+                            android:background="@color/error_red"
+                            android:visibility="invisible" />
 
                         <View
                             android:id="@+id/strengthThree"
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/_3sdp"
-                            android:layout_marginLeft="@dimen/_5sdp"
+                            android:layout_height="2dp"
+                            android:layout_marginEnd="10dp"
                             android:layout_weight="1"
-                            android:background="@color/error"
-                            android:visibility="invisible"/>
+                            android:background="@color/error_red"
+                            android:visibility="invisible" />
                     </LinearLayout>
+
                 </RelativeLayout>
 
                 <TextView
@@ -142,12 +215,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/layoutPwd"
-                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:text="Must be 8-12 characters, 1 uppercase, 1 number, 1 lower case, 1 special character."
                     android:textColor="@color/error"
-                    android:textSize="@dimen/_10sdp"
-                    android:visibility="gone"/>
+                    android:textSize="@dimen/_10sdp" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/etlCPassword"
@@ -157,6 +229,7 @@
                     android:layout_below="@+id/tvPasswordInfo"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:hint="Confirm Password"
+                    android:textColorHint="@color/primary_black"
                     app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                     app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                     app:boxCornerRadiusTopEnd="@dimen/_10sdp"
@@ -164,9 +237,7 @@
                     app:boxStrokeColor="@color/primary_green"
                     app:errorIconDrawable="@null"
                     app:expandedHintEnabled="false"
-                    app:hintTextColor="@color/primary_green"
-                    app:passwordToggleEnabled="true"
-                    app:passwordToggleTint="#767676">
+                    app:hintTextColor="@color/primary_green">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etCPassword"
@@ -199,7 +270,7 @@
                         android:fontFamily="@font/opensans_bold"
                         android:text="Save"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/_12ssp"/>
+                        android:textSize="@dimen/_12ssp" />
                 </androidx.cardview.widget.CardView>
             </RelativeLayout>
         </ScrollView>
@@ -219,7 +290,7 @@
             android:layout_above="@+id/tvDone"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="30dp"
-            android:src="@drawable/ic_success_icon"/>
+            android:src="@drawable/ic_success_icon" />
 
         <TextView
             android:id="@+id/tvDone"
@@ -229,7 +300,7 @@
             android:fontFamily="@font/opensans_bold"
             android:text="All Done"
             android:textColor="@color/black"
-            android:textSize="@dimen/_16ssp"/>
+            android:textSize="@dimen/_16ssp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -240,7 +311,7 @@
             android:gravity="center"
             android:text="Your password has been successfully updated."
             android:textColor="@color/text_color"
-            android:textSize="@dimen/_12ssp"/>
+            android:textSize="@dimen/_12ssp" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvLogin"
@@ -258,7 +329,7 @@
                 android:fontFamily="@font/opensans_bold"
                 android:text="Log in"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_12ssp"/>
+                android:textSize="@dimen/_12ssp" />
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
