--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -38,8 +38,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingBottom="@dimen/_14sdp"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:paddingBottom="@dimen/_14sdp">
 
                         <ImageView
                             android:id="@+id/cpbackBtn"
@@ -82,9 +82,7 @@
                                         android:fontFamily="@font/opensans_bold"
                                         android:text="@string/cu_profile_name"
                                         android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_14ssp"
-
-                                        />
+                                        android:textSize="@dimen/_14ssp" />
 
                                     <TextView
                                         android:id="@+id/cpAccountIDTV"
@@ -313,9 +311,9 @@
                     android:layout_marginEnd="14dp"
                     android:orientation="vertical"
 
-                    android:paddingEnd="@dimen/_11sdp"
                     android:paddingStart="@dimen/_11sdp"
-                    android:paddingTop="@dimen/_11sdp">
+                    android:paddingTop="@dimen/_11sdp"
+                    android:paddingEnd="@dimen/_11sdp">
 
                     <LinearLayout
                         android:id="@+id/cpUserDetailsLL"
@@ -465,6 +463,7 @@
                         android:orientation="horizontal"
                         android:paddingTop="@dimen/_16sdp"
                         android:paddingBottom="@dimen/_16sdp">
+
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
@@ -601,8 +600,7 @@
                         android:id="@+id/cpFaceIdSetting"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        >
+                        android:orientation="horizontal">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -613,9 +611,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="170dp"
+                                android:fontFamily="@font/opensans_semibold"
                                 android:paddingTop="@dimen/_16sdp"
                                 android:paddingBottom="@dimen/_16sdp"
-                                android:fontFamily="@font/opensans_semibold"
                                 android:text="@string/security_faceid"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_12sdp" />
@@ -624,9 +622,9 @@
                                 android:id="@+id/switchbtn"
                                 android:layout_width="@dimen/_55sdp"
                                 android:layout_height="@dimen/_26sdp"
+                                android:layout_alignParentRight="true"
                                 android:layout_marginTop="@dimen/_11sdp"
                                 android:layout_marginBottom="@dimen/_11sdp"
-                                android:layout_alignParentRight="true"
                                 android:textSize="@dimen/text_size_11sp"
                                 app:colorBorder="@color/primary_color"
                                 app:colorOn="@color/primary_color"
@@ -684,7 +682,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cpLogout"
+                android:id="@+id/cvLogout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_21sdp"
@@ -698,15 +696,12 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="Log Out"
                     android:paddingTop="@dimen/_13sdp"
                     android:paddingBottom="@dimen/_13sdp"
+                    android:text="Log Out"
                     android:textAlignment="center"
                     android:textColor="@color/primary_color"
-                    android:textSize="@dimen/_12ssp"
-
-
-                    />
+                    android:textSize="@dimen/_12ssp" />
 
 
             </androidx.cardview.widget.CardView>
@@ -716,7 +711,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginBottom="20dp"
-                android:background="@color/primary_color" />
+                android:background="@color/primary_color"
+                android:visibility="gone" />
 
 
         </LinearLayout>
