--- a/app/src/main/res/layout/activity_account_type.xml
+++ b/app/src/main/res/layout/activity_account_type.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".view.AccountTypeActivity"
     android:background="@color/white"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
+    android:orientation="vertical"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
+    tools:context=".view.AccountTypeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,10 +22,10 @@
         <ImageView
             android:layout_width="@dimen/_116sdp"
             android:layout_height="@dimen/_47sdp"
-            android:src="@drawable/ic_coyni_logo"
-            android:layout_marginTop="7dp"
             android:layout_gravity="center"
-            android:layout_marginBottom="43dp"/>
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="43dp"
+            android:src="@drawable/ic_coyni_logo" />
 
 
     </LinearLayout>
@@ -37,13 +37,38 @@
         android:layout_weight="1">
 
         <LinearLayout
+            android:id="@+id/personalAccontLL"
             android:layout_width="match_parent"
             android:layout_height="180dp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:layout_weight="1"
             android:background="@drawable/account_type_bg"
             android:gravity="center"
-            android:orientation="vertical"
-            android:layout_marginEnd="@dimen/_10sdp">
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="@dimen/_54sdp"
+                android:layout_height="@dimen/_54sdp"
+                android:src="@drawable/ic_user" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:fontFamily="@font/opensans_semibold"
+                android:text="Personal"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_weight="1"
+            android:background="@drawable/account_type_bg"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:layout_width="@dimen/_54sdp"
@@ -57,37 +82,8 @@
                 android:fontFamily="@font/opensans_semibold"
                 android:text="Business"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp"
-                />
+                android:textSize="@dimen/_12ssp" />
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_weight="1"
-            android:background="@drawable/account_type_bg"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:id="@+id/personalAccontLL">
-
-            <ImageView
-                android:layout_width="@dimen/_54sdp"
-                android:layout_height="@dimen/_54sdp"
-                android:src="@drawable/ic_user"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="Personal"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp"
-                />
-        </LinearLayout>
-
 
     </LinearLayout>
 
