--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -237,7 +237,8 @@
                     app:boxStrokeColor="@color/primary_green"
                     app:errorIconDrawable="@null"
                     app:expandedHintEnabled="false"
-                    app:hintTextColor="@color/primary_green">
+                    app:hintTextColor="@color/primary_green"
+                    app:passwordToggleEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etCPassword"
