--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fillViewport="true"
     android:background="@color/white"
+    android:fillViewport="true"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <RelativeLayout
@@ -16,8 +16,8 @@
             android:id="@+id/layoutClose"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imgClose"
@@ -32,10 +32,10 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:layout_marginTop="-25dp"
                     android:id="@+id/loginBGIV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="-25dp"
                     android:src="@drawable/ic_logintoplogo"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,6 @@
                     app:layout_editor_absoluteX="336.24dp" />
 
 
-
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
@@ -54,20 +53,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_marginLeft="@dimen/_21sdp"
             android:layout_marginRight="@dimen/_21sdp"
-            android:orientation="vertical"
-            android:layout_alignParentBottom="true">
+            android:orientation="vertical">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:src="@drawable/ic_coynilogo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.41"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_gravity="center"/>
+                app:layout_constraintStart_toStartOf="parent" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/etlEmail"
@@ -84,7 +83,7 @@
                 app:boxStrokeColor="@color/primary_green"
                 app:errorIconDrawable="@null"
                 app:expandedHintEnabled="false"
-                app:hintTextColor="@color/black">
+                app:hintTextColor="@color/primary_green">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etEmail"
@@ -94,7 +93,7 @@
                     android:hint="Coyni@example.com"
                     android:imeOptions="actionNext"
                     android:inputType="text"
-                    android:maxLength="30"
+                    android:maxLength="255"
                     android:padding="@dimen/_12sdp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12ssp" />
@@ -152,7 +151,7 @@
                     android:hint="************"
                     android:imeOptions="actionDone"
                     android:inputType="textPassword"
-                    android:maxLength="30"
+                    android:maxLength="12"
                     android:padding="@dimen/_12sdp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12ssp"
@@ -202,7 +201,7 @@
                     android:theme="@style/AppTheme" />
             </LinearLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_25sdp"
@@ -212,23 +211,21 @@
                     android:id="@+id/forgotpwd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/forgotpwd"
                     android:fontFamily="@font/opensans_semibold"
                     android:text="@string/forgotpwdtxt"
                     android:textColor="@color/primary_green"
-                    android:textSize="@dimen/_12ssp"
-                    android:layout_weight="1"/>
+                    android:textSize="@dimen/_12ssp" />
 
                 <TextView
                     android:id="@+id/tvRetEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
                     android:fontFamily="@font/opensans_semibold"
                     android:text="@string/retrievemail"
                     android:textColor="@color/primary_green"
                     android:textSize="@dimen/_12ssp" />
-
-            </LinearLayout>
+            </RelativeLayout>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvNext"
@@ -236,9 +233,9 @@
                 android:layout_height="@dimen/_44sdp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginTop="@dimen/_33sdp"
+                android:layout_marginBottom="@dimen/_2sdp"
                 app:cardBackgroundColor="@color/inactive_color"
-                app:cardCornerRadius="@dimen/_22sdp"
-                android:layout_marginBottom="@dimen/_2sdp">
+                app:cardCornerRadius="@dimen/_22sdp">
 
                 <TextView
                     android:id="@+id/nextBtn"
