--- a/app/src/main/res/layout/activity_otpvalidation.xml
+++ b/app/src/main/res/layout/activity_otpvalidation.xml
@@ -7,8 +7,8 @@
     android:background="@color/white"
     android:orientation="vertical"
     android:padding="@dimen/_20sdp"
-    tools:context=".view.OTPValidation"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
+    tools:context=".view.OTPValidation">
 
     <LinearLayout
         android:id="@+id/layoutEntry"
@@ -61,13 +61,13 @@
             app:cursorWidth="0dp"
             app:hideLineWhenFilled="false"
             app:itemCount="6"
+            app:itemHeight="58dp"
             app:itemRadius="6dp"
             app:itemSpacing="5dp"
+            app:itemWidth="48dp"
             app:lineColor="@color/line_colors"
             app:lineWidth="2dp"
-            app:viewType="rectangle"
-            app:itemHeight="58dp"
-            app:itemWidth="48dp"/>
+            app:viewType="rectangle" />
 
         <TextView
             android:layout_width="match_parent"
@@ -122,29 +122,28 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_above="@+id/secureNextCV"
-            android:layout_alignParentTop="true">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Secure Your Account"
-                android:textSize="@dimen/_16ssp"
-                android:textColor="@color/primary_black"
-                android:fontFamily="@font/opensans_bold"
-                android:layout_marginBottom="@dimen/_21sdp"
-                android:layout_marginTop="@dimen/_62sdp"
-                />
+            android:layout_alignParentTop="true"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="One way we keep your account secure is with 2- step verification, which requires you to create 6-digit PIN"
-                android:textSize="@dimen/_12ssp"
-                android:textColor="@color/primary_black"
-                android:fontFamily="@font/opensans_regular"
+                android:layout_marginTop="@dimen/_62sdp"
+                android:layout_marginBottom="@dimen/_21sdp"
+                android:fontFamily="@font/opensans_bold"
+                android:text="Secure your account"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_40sdp"
-                />
+                android:fontFamily="@font/opensans_regular"
+                android:text="One way we keep your account secure is with 2- step verification, which requires you to create 6-digit PIN"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
 
             <ImageView
                 android:layout_width="match_parent"
