--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -44,98 +44,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvHead"
+            android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="@font/opensans_regular"
             android:text="@string/chpwdmsg"
             android:textColor="@color/text_color"
-            android:textSize="@dimen/text_size_18sp"
+            android:textSize="@dimen/_12ssp"
             android:visibility="gone" />
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/tvMessage"
-            android:layout_marginTop="@dimen/_14sdp"
+            android:layout_marginTop="@dimen/_15sdp"
             android:fillViewport="true"
             android:scrollbars="none">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
-                <!--                <RelativeLayout-->
-                <!--                    android:id="@+id/layoutPwd"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content">-->
-
-                <!--                    <com.google.android.material.textfield.TextInputLayout-->
-                <!--                        android:id="@+id/etlPassword"-->
-                <!--                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
-                <!--                        android:layout_width="match_parent"-->
-                <!--                        android:layout_height="wrap_content"-->
-                <!--                        android:hint="@string/new_password"-->
-                <!--                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"-->
-                <!--                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"-->
-                <!--                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"-->
-                <!--                        app:boxCornerRadiusTopStart="@dimen/_10sdp"-->
-                <!--                        app:boxStrokeColor="@color/primary_green"-->
-                <!--                        app:errorIconDrawable="@null"-->
-                <!--                        app:expandedHintEnabled="false"-->
-                <!--                        app:hintTextColor="@color/primary_green"-->
-                <!--                        app:passwordToggleEnabled="true"-->
-                <!--                        app:passwordToggleTint="#767676">-->
-
-                <!--                        <com.google.android.material.textfield.TextInputEditText-->
-                <!--                            android:id="@+id/etPassword"-->
-                <!--                            android:layout_width="match_parent"-->
-                <!--                            android:layout_height="wrap_content"-->
-                <!--                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.!@#$%^_+-*?/;:'"-->
-                <!--                            android:fontFamily="@font/opensans_semibold"-->
-                <!--                            android:hint=""-->
-                <!--                            android:imeOptions="actionNext"-->
-                <!--                            android:inputType="textPassword"-->
-                <!--                            android:maxLength="20"-->
-                <!--                            android:textColor="@color/text_color"-->
-                <!--                            android:textSize="@dimen/_11sdp" />-->
-
-                <!--                    </com.google.android.material.textfield.TextInputLayout>-->
-
-                <!--                    <LinearLayout-->
-                <!--                        android:id="@+id/layoutIndicator"-->
-                <!--                        android:layout_width="match_parent"-->
-                <!--                        android:layout_height="wrap_content"-->
-                <!--                        android:layout_alignParentBottom="true"-->
-                <!--                        android:layout_marginLeft="@dimen/_10sdp"-->
-                <!--                        android:layout_marginRight="@dimen/_10sdp"-->
-                <!--                        android:layout_marginBottom="@dimen/_3sdp"-->
-                <!--                        android:orientation="horizontal"-->
-                <!--                        android:visibility="gone">-->
-
-                <!--                        <View-->
-                <!--                            android:id="@+id/strengthOne"-->
-                <!--                            android:layout_width="match_parent"-->
-                <!--                            android:layout_height="@dimen/_3sdp"-->
-                <!--                            android:layout_weight="1"-->
-                <!--                            android:background="@color/error" />-->
-
-                <!--                        <View-->
-                <!--                            android:id="@+id/strengthTwo"-->
-                <!--                            android:layout_width="match_parent"-->
-                <!--                            android:layout_height="@dimen/_3sdp"-->
-                <!--                            android:layout_marginLeft="@dimen/_5sdp"-->
-                <!--                            android:layout_weight="1"-->
-                <!--                            android:background="@color/error"-->
-                <!--                            android:visibility="invisible" />-->
-
-                <!--                        <View-->
-                <!--                            android:id="@+id/strengthThree"-->
-                <!--                            android:layout_width="match_parent"-->
-                <!--                            android:layout_height="@dimen/_3sdp"-->
-                <!--                            android:layout_marginLeft="@dimen/_5sdp"-->
-                <!--                            android:layout_weight="1"-->
-                <!--                            android:background="@color/error"-->
-                <!--                            android:visibility="invisible" />-->
-                <!--                    </LinearLayout>-->
-                <!--                </RelativeLayout>-->
 
                 <RelativeLayout
                     android:id="@+id/layoutPwd"
@@ -150,6 +76,7 @@
                         android:hint="@string/new_password"
                         android:textColorHint="@color/primary_black"
                         app:boxStrokeColor="@color/primary_green"
+                        app:errorIconDrawable="@null"
                         app:expandedHintEnabled="false"
                         app:hintTextColor="@color/primary_green"
                         app:passwordToggleEnabled="true"
@@ -248,10 +175,10 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="@string/confirm_password"
                         android:imeOptions="actionDone"
-                        android:inputType="textPassword|textMultiLine"
-                        android:maxLength="20"
+                        android:inputType="textPassword"
+                        android:maxLength="12"
                         android:textColor="@color/text_color"
-                        android:textSize="@dimen/text_size_18sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -261,7 +188,7 @@
                     android:layout_height="@dimen/_45sdp"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="@dimen/_27sdp"
-                    app:cardBackgroundColor="@color/primary_green"
+                    app:cardBackgroundColor="@color/inactive_color"
                     app:cardCornerRadius="@dimen/_22sdp">
 
                     <TextView
