--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F2F4F5"
-    tools:context=".view.DashboardActivity"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
+    tools:context=".view.DashboardActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -22,89 +22,94 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginRight="-30dp"
-                android:background="@drawable/ic_dash_back"/>
+                android:background="@drawable/ic_dash_back" />
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cvProfile"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="30dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="18dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ProgressBar
-                        android:id="@+id/progressBar"
-                        style="?android:attr/progressBarStyleHorizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/circle_shape"
-                        android:indeterminate="false"
-                        android:max="100"
-                        android:progress="100"
-                        android:progressDrawable="@drawable/circular_progress_bar" />
-
-                    <TextView
-                        android:id="@+id/tvUserInfo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text=""
-                        android:textColor="@color/text_color"
-                        android:textSize="14sp"
-                        android:visibility="gone"></TextView>
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/cvProfilePic"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_centerInParent="true"
-                        android:visibility="visible"
-                        app:cardCornerRadius="16dp">
-
-                        <ImageView
-                            android:id="@+id/imgProfile"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ic_profile"
-                            android:visibility="visible"></ImageView>
-                    </androidx.cardview.widget.CardView>
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/tvUserName"
+            <LinearLayout
+                android:id="@+id/layoutPrPic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="15dp"
-                android:layout_toRightOf="@+id/cvProfile"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="Hi! [Name Selected]"
-                android:textColor="@color/text_color"
-                android:textSize="@dimen/_12ssp"></TextView>
+                android:layout_marginTop="?attr/actionBarSize"
+                android:orientation="horizontal"
+                android:layout_marginLeft="30dp">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cvProfile"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="18dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ProgressBar
+                            android:id="@+id/progressBar"
+                            style="?android:attr/progressBarStyleHorizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/circle_shape"
+                            android:indeterminate="false"
+                            android:max="100"
+                            android:progress="100"
+                            android:progressDrawable="@drawable/circular_progress_bar" />
+
+                        <TextView
+                            android:id="@+id/tvUserInfo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:fontFamily="@font/opensans_bold"
+                            android:text=""
+                            android:textColor="@color/text_color"
+                            android:textSize="14sp"
+                            android:visibility="gone"></TextView>
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/cvProfilePic"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_centerInParent="true"
+                            android:visibility="visible"
+                            app:cardCornerRadius="16dp">
+
+                            <ImageView
+                                android:id="@+id/imgProfile"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/ic_profile"
+                                android:visibility="visible"></ImageView>
+                        </androidx.cardview.widget.CardView>
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/tvUserName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="Hi! [Name Selected]"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/_12ssp"></TextView>
+            </LinearLayout>
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
+                android:layout_marginTop="?attr/actionBarSize"
                 android:layout_marginRight="@dimen/_21sdp"
                 android:src="@drawable/ic_notifications"></ImageView>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/cvProfile"
+                android:layout_below="@+id/layoutPrPic"
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="20dp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="Available Balance"
                 android:textColor="@color/text_color"
