--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -14,14 +14,21 @@
     <RelativeLayout
         android:id="@+id/layoutClose"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/imgFPClose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_close"></ImageView>
+        <LinearLayout
+            android:id="@+id/llClose"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgFPClose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_close"></ImageView>
+        </LinearLayout>
     </RelativeLayout>
 
     <TextView
@@ -79,12 +86,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
-                    android:hint="@string/email"
+                    android:hint="Coyni@example.com"
                     android:imeOptions="actionDone"
-                    android:inputType="text"
-                    android:maxLength="30"
+                    android:inputType="textEmailAddress"
+                    android:maxLength="255"
                     android:padding="@dimen/_12sdp"
                     android:textColor="@color/text_color"
+                    android:textColorHint="@color/light_gray"
+                    android:textCursorDrawable="@drawable/cursor_color"
                     android:textSize="@dimen/_12ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
